Sec:Methode - AAS

--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -1,6 +1,6 @@
 % ---------------------------------------
 \subsection{Versuchssituation}\label{sec:Versuchssituation}
-Die Durchführung dieser Arbeit erfolgte im Rahmen einer Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefung klinische Psychologie im Frühlingssemester 2018. Dieser Arbeit ging die Wahl des Themas und des Dozenten mittels Disposition im Herbstsemester 2017 voraus. Darin wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung (siehe auch Kap. \titleref{sec:Hintergrund}) das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten besprochen. 
+Die Durchführung dieser Arbeit erfolgte im Frühlingssemester 2018 im Rahmen einer Masterarbeit an der Zürcher Hochschule für Angewandte Wissenschaften (ZHAW) im Studiengang Angewandte Psychologie in der Vertiefung klinische Psychologie. Dieser Arbeit ging die Wahl des Themas und des Dozenten mittels Disposition im Herbstsemester 2017 voraus. Darin wurde anhand aktueller theoretischer Ansätze und der bisherigen Forschung (siehe auch Kap. \titleref{sec:Hintergrund}) das Vorgehen und das Design vordefiniert und zusammen mit dem betreuenden Dozenten besprochen. 
 
 In einem ersten Schritt wurde, basierend auf der theoretischen Vorarbeit, ein standardisierter Fragebogen anhand der für die Beantwortung der Fragestellung notwendigen Konstrukte \textit{Bindung}, \textit{Stress}, \textit{Medienverhalten} und \textit{subjektives Wohlbefinden}, sowie der soziodemografischen Daten zusammengestellt. Dazu wurden soweit als möglich bereits normierte und validierte Instrumente oder Teile aus bereits existierender Umfragen verwendet. Die Umfrage erfolgte elektronisch über das Internet und setze sich aus einer kurzen Erläuterung der Studie, sowie entsprechende Anweisungen zur Beantwortung der Fragen und den ausgewählten Erhebungsinstrumenten zusammen. 
 
@@ -12,13 +12,28 @@ Die gesamte Arbeit dauerte von der Erstellung der Disposition im Herbstsemester 
 
 % ---------------------------------------
 \subsection{Design \& Operationalisiserung} \label{sec:Design}
-Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Die Generierung der Daten für die Beantwortung der Fragestellung erfolgte mittels Internet-Fragebogen. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte.
+Bei der vorliegenden Studie handelt es sich um eine empirische Querschnitts-Studie mit quantitativem Charakter. Aus ökonomischer Sicht und bezüglich einem hohen Mass an Standardisierung \cite[S.~86ff]{sedlmeier2008} wurde eine schriftliche Befragung via Internet-Fragebogen durchgeführt. Dadurch konnten die Befragten leichter kontaktiert und ein höherer Grad an Anonymität erreicht werden. Dazu wurden die für die Hypothesen relevanten Parameter empirisch erhoben und mittels deskriptiver Statistik ausgewertet. Der Fragebogen wurde in deutscher Sprache verfasst, weshalb die Rekrutierung ausschliesslich in der deutschsprachigen Schweiz erfolgte. Eine Übersetzung der Umfrage in weiter Sprachen hätte den Umfang dieser Arbeit gesprengt, da die einzelnen Fragebögen durch eine der wissenschaft genügenden Hin- und Rückübersetzung durch Personen aus den beiden Muttersprächen zu erfolgen gehabt hätte \cite{Pfetsch2016}.
 
-Begründung des Designs anhand \citeA{sedlmeier2008} S. 84ff.
+Im Folgenden werden die einzelnen für die Beantwortung der Fragestellung notwendiger Konstrukte näher erläutert und operationalisiert.
 
 \subsubsection{Soziodemografische Daten}\label{sec:SoziodemografischeDaten}
+Bei den soziodemografischen Daten wurden folgende Parameter erfasst: Geschlecht, Jahrgang (Alter), Alter des Kindes in Monaten, Geschlecht des Kindes, brutto Familieneinkommen gemäss \citeA{NZZ2014}, Bildungsabschluss gemäss \citeA{Bfsnd}, Anzahl Personen im gleichen Haushalt, Lebensform, Anzahl Tage, an denen das Kind fremdbetreut ist und der durchschnittliche Betreuungsaufwand pro Woche.
+
 \subsubsection{Medien und Mediennutzung}\label{sec:MedienMediennutzung}
+Die Fragebogenitems wurden basierend auf den Vorlagen der Erhebungsinstrumenten der Studien \citeA{Feierabend2017, Blikk2017, Waller2016, Suter2015, Feierabend2015, Kabali2015} neu erstellt. Dabei stand die Mediennutzungszeit während der Betreuung der Kinder, also die Dauer der Mediennutzung in Minuten und das dazu verwendeten Geräte und Medium im Fokus. Es erfolgte ein Spezifizierung des Frageitems hinsichtlich des betreuten Kindes, ob dieses wach war oder geschlafen hat und hinsichtlich des benutzen Mediums, ob dieses privat oder geschäftlich genutzt wurde. Die Erfassung der Mediennutzungszeit wurde anhand der letzten Betreuungstätigkeit vorgenommen, da davon ausgegangen wurde, dass sich die Befragten am ehesten an die absolute Zeit erinnern konnten. Eine Unterteilung in Tage unter der Woche oder am Wochenende wurde als wenig zielführend erachtet. Für die Beantwortung der Fragestellung hätte bereits die reine Mediennutzungszeit gereicht. Es wurde jedoch als hilfreich erachtet, zusätzliche Parameter zu der reinen Mediennutzungsdauer zu erheben, um gegebenenfalls die Fragestellung detaillierter beantworten zu können. Ein weiterer Grund für die zusätzlichen Fragebogenitems ist hinsichtlich der spärlichen Datenlage im Bereich Mediennutzung von Eltern mit Kleinkindern zu nennen. Erfasst wurden neben dem benutzen Medium und der aufgewendeten Zeit, die im Haushalt vorhanden Geräte und auf welches der benutzen Geräte während der Betreuung am wenigsten verzichtet werden konnte. 
+
+\textit{TBD: Operationalisierung - e.g. Gesamtzeit in Minuten, gegliedert nach Medium, etc.}
+
 \subsubsection{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
+Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \citeA{Schmidt2004} ins Deutsche übersetzte Adult Attachment Scale (AAS) von \citeA{Collins1990} verwendet. Dabei gilt dieser gemäss \citeA{Fraley2000} als einer der weit verbreiteten Selbsterfassungsbögen im englischsprachigen Raum.
+
+Der ursprüngliche AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1) bis \enquote{stimmt genau} eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertaut, dass ander für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
+
+Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und somit zufriedenstellende Werte (Endgültige Version siehe Anhang \titleref{app:AAS}).
+
+\textit{TBD: Operationalisierung}
+
+
 \subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
 
