--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -25,16 +25,31 @@ Die Fragebogenitems wurden basierend auf den Vorlagen der Erhebungsinstrumenten 
 \textit{TBD: Operationalisierung - e.g. Gesamtzeit in Minuten, gegliedert nach Medium, etc.}
 
 \subsubsection{Bindung: Adult Attachment Scale (AAS)}\label{sec:AAS}
-Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \citeA{Schmidt2004} ins Deutsche übersetzte Adult Attachment Scale (AAS) von \citeA{Collins1990} verwendet. Dabei gilt dieser gemäss \citeA{Fraley2000} als einer der weit verbreiteten Selbsterfassungsbögen im englischsprachigen Raum.
+Für die Erfassung des Bindungsstils (\textit{engl. attachment}) wurde der von \citeA{Schmidt2004} ins Deutsche übersetzte Adult Attachment Scale (AAS) von \citeA{Collins1990} verwendet. Dieser versucht die Bindung über die Selbstbeschreibungsmasse zu erfassen, in Ahnlehnung an die 1-Item-Selbstbeschreibungsmasse von \citeA{Hazan1987}. Dabei gilt dieser gemäss \citeA{Fraley2000} als einer der weit verbreiteten Selbsterfassungsbögen im englischsprachigen Raum.
 
-Der ursprüngliche AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1) bis \enquote{stimmt genau} eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertaut, dass ander für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
+Der ursprüngliche AAS Fragebogen besteht aus insgesamt 18 Items, die auf einer fünfstufigen Likert-Skala von \enquote{stimmt gar nicht} (1) bis \enquote{stimmt genau} eingeschätzt werden. Dabei werden die Skalenwerte als Summenwerte der Itemantworten jeder Skala berechnet. Der Fragebogen bezieht sich auf bindungsrelevante Einstellungen der Befragten und wird mit drei Bindungsskalen erhoben: Die Skala \textit{Nähe} (1) beschreibt das Ausmass, in dem sich eine Person mit Nähe wohl fühlt und diese Nähe nicht mit übermässigen Ängsten verbindet. Die Skala \textit{Vertrauen} (2) beschreibt das Ausmass, in dem eine Person darauf vertraut, dass andere für sie verfügbar sind und dass die Person sich diesen anderen gegebenenfalls tatsächlich anvertrauen kann. Die Skala \textit{Angst} (3) beschreibt in erster Linie Ängste, allein gelassen oder verlassen zu werden. Was sich in einem übermässigen Bedürfnis nach Nähe aus, oder in Befürchtungen, der andere würde diese Bedürnisse zurückweisen. 
 
-Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und somit zufriedenstellende Werte (Endgültige Version siehe Anhang \titleref{app:AAS}).
+Gemäss der Prüfung der Faktorenstruktur des AAS durch \citeA{Schmidt2004} wurden die Elemente 2 und 9 auf Basis der inhaltlichen Ambivalenz der Itemformulierung und der Ergebnisse der konfirmatorischen Faktorenanalyse eliminiert. Diese Reduktion führte zu einer fünf-Item-Version der Skala Nähe und Angst. Die dadurch erhaltene interne Konsistenz (Reliabilität) erreichte in der Untersuchung von \citeA{Schmidt2004} ein $\alpha$ von 0,80 für die Skala Nähe, ein $\alpha$ von 0,72 für die Skala Vertauen und ein $\alpha$ von 0,78 für die Skala Angst. Somit lieferte die überarbeitete Version gemäss \citeA{Buehner2011} niedrige bis mittlere Werte und sind somit zufriedenstellend (Endgültige Version siehe Anhang \titleref{app:AAS}).
 
 \textit{TBD: Operationalisierung}
 
 
 \subsubsection{Stress: Perceived Stress Questionnaire (PSQ)}\label{sec:PSQ}
+Für die Erfassung der aktuellen subjektiv erlebten Belastung, wurde der \textit{Perceived Stress Questionnaire (PSQ)} von \citeA{Levenstein1993} in der deutschen Übersetzung von \citeA{Fliege2001} verwendet.
+\citeA{Levenstein1993} kreierte für den anglo-amerikanischen und italienischen Sprachraum ein Instrument, mit dem das Ausmass der subjektiv wahrgenommenen und erlebten aktuellen Belastung erfasst werden soll. Also das Ausmass aktuell wahrgenommener Belastungsfaktoren und das Erleben der eigenen Belastetheit auf der kognitiven und emotionalen Ebene \cite{Fliege2001}. Der Begriff Belastetheit soll verdeutlichen, dass es sich nicht um die Quelle der Belastung, sondern die Reaktion darauf gemeint ist. Die inhaltlichen Kriterien des Fragebogens sind (vgl. ebd.): (1) Stress wird als subjektives Belastungserleben erfasst. Damit wird gemeint, dass sich die Itemformulierung so weit wie möglich an der Perspektive der Wahrnehmung und Bewerung durch die Person orientiert. (2) Belastungsfaktoren und subjektive Belastetheit sollen als übergeordnete Klassen erfasst werden. Dies wird durch eine Vermeiden von Person- und situationsspezifische Formulierungen erreicht (z.B. keine eindeutig berufsbezogene Items). (3) Es wird lediglich das Belastungserleben und nicht der konkrete Umgang mit der Belastung erfragt. Dadurch soll sich der Test von der Erfassung von Bewältigungsbemühungen abgrenzen. Das Belastungserleben wird unabhängig von der Stelle erfasst, an der sich eine Person in einem möglichen Bewältingungsprozess befindet. (4) Es wird die Selbsteinschätzung der Person erhoben und somit nur der bewusste Anteil des Belastungserlebens.
+
+Die Autoren \citeA{Levenstein1993} schlagen vor, das Instrument für Untersuchungen von Zusammenhängen zwischen Stresserleben und Krankheitsentwicklung zu verwenden. Auch wenn in dieser Arbeit weder vom Medienverhalten noch vom subjektiven Wohlbefinden als Krankheit gesprochen werden kann, so sollen die Vorzüge dieses Instruments bezüglich der ökonomisch Durchführbarkeit, die Eignung zur Erfassung möglichst verschiedener Lebenskontexten von Erwachsenen und die Fokussierung auf das gegenwärtige Erleben hervorgehoben werden \cite{Fliege2001}. Bezüglich der empirischen Prüfung und Gütekriterien dieses Testinstruments kann gemäss \citeA{Naescher2009} von einer Auswertungsobjektivität, einer mittleren bis hohen Realiabilität und einer soliden Valildierung ausgegangen werden. Der Perceived Stress Questionnaire \cite{Fliege2001} ist für alle Erwachsenen und für verschiedene Lebenssituationen geeignet. Die deutsche Stichprobe, auf die sich die Werte beziehen, wurde an Probanden zwischen 17 und 79 Jahren erhoben. Der Fragebogen kann gemäss \citeA{Naescher2009} zur Diagnostik des subjektiven Belastungserlebens bei Erwachsenen zweifellos empfohlen werden.
+
+Durch die Validierung und Übersetzung des originalen Fragebogens ins Deutsche, wurden die ursprünglich 30 Items, basierend auf der durchgeführten exploratorischen Faktorenanalyse, auf 20 reduziert. Dadurch entstand die in dieser Arbeit verwendete Kurzversion dieses Fragebogens. Das Verfahren ist im \enquote{Elektronischen Testarchiv} des ZPID enthalten kann für nichtkommerzielle Forschungs- und Unterrichtszwecke kostenlos eingesetzt werden \cite{ZPID}. Ebenso konnten die ursprünglich siebenfaktorielle Zuordnung der Items nicht beibehalten werden. Folgende vier Skalen blieben dabei übrig: (1) Sorgen, (2) Anspannung, (3) Freude und (4) Anforderungen. Diese Veränderungen sind nachvollziehbar und bei \citeA{Fliege2001} ausführlich dokumentiert. Die Einschätzung erfolgt über eine viertstufige Likertskale, die von 1 für \textit{fast nie}, über 2 für \textit{manchmal}, 3 für \textit{häufig} bis zu 4 für \textit{meistens} reicht. Bei den Items handelt es sich um Feststellungen, die von der Testperson beurteilt werden sollen. 
+
+TBD: Operationalisierung:
+Gemäss Text von \citeA{Naescher2009}: In der nachfolgenden Aufstellung entspricht die Zahl vor der Klammer jeweils der Nummer des Items in der gekürzten und die dahinterstehende Zahl in Klammern der Nummer des Items in der Normalversion. Bei Items mit einem * muss der Wert des Items von 5 abgezogen werden, bevor das Ergebnis mit den Werten der anderen Items in die Berechnung eingeht. Hierbei handelt es sich um die Items 01 (01), 06 (10) und 19 (29). 
+(a) Sorgen (worries): 05 (09), 07 (12), 10 (15), 13 (18), 15 (22); 
+(b) Anspannung (tension): 01* (01*), 06* (10*), 09 (14), 17 (26), 18 (27); 
+(c) Freude (joy): 04 (07), 08 (13), 12 (17), 14 (21), 16 (25); 
+(d) Anforderungen (demands): 02 (02), 03 (04), 11 (16), 19* (29*), 20 (30). 
+Die Werte der Items jeder Skala werden jeweils aufaddiert, mit -1 multipliziert und anschließend durch 3 dividiert. Hierdurch entsteht ein Wert zwischen 0 und 1, welcher im Anschluss mit 100 multipliziert wird. Das Ergebnis ist ein Skalenrang zwischen 0 und 100. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
+
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
 
 
