sec:Methode - swb

--- a/content/1_theorie.tex
+++ b/content/1_theorie.tex
@@ -81,6 +81,7 @@ Siehe auch AAS Einleitung von \citeA{Schmidt2004}.
 
 % ---------------------------------------
 \subsubsection{TBD: Subjektives Wohlbefinden}\label{sec:Swb}
+Siehe auch \citeA{Swami2009} für theoretischen Überblick. Und \citeA{Lyubomirsky1999}.
 
 
 
