--- a/content/2_methode.tex
+++ b/content/2_methode.tex
@@ -51,9 +51,19 @@ Gemäss Text von \citeA{Naescher2009}: In der nachfolgenden Aufstellung entspric
 Die Werte der Items jeder Skala werden jeweils aufaddiert, mit -1 multipliziert und anschließend durch 3 dividiert. Hierdurch entsteht ein Wert zwischen 0 und 1, welcher im Anschluss mit 100 multipliziert wird. Das Ergebnis ist ein Skalenrang zwischen 0 und 100. Hohe Werte in einer Skala bedeuten jeweils auch eine hohe Ausprägung der betreffenden Eigenschaft.
 
 \subsubsection{Subjektives Wohlbefinden: Subjective Happiness Scale (SHS)}\label{sec:SWB}
+Die Erfassung des subjektiven Wohlbefindens erfolgte anhand dem von \citeA{Lyubomirsky1999} entwickelten \textit{Subjective Happiness Scale (SHS)}, in der deutschen Übersetzung und Überprüfung von \citeA{Swami2009}. Der SHS wurde für die Erfassung  eines allgemeinen subjektiven Wohlbefindens mittels Selbtseinschätzungsfragebogen entwickelt. Ein Wohlbefinden, dass in seiner globalen und grundsätzlichen Ausprägung, also ob es sich um einen glücklichen oder unglücklichen Menschen handelt, erfasst wird  \cite[S.~139ff]{Lyubomirsky1999}. Die Skala enthält insgesamt vier Items. Zwei davon erfassen das eigene Selbstbild, basierend auf einer absoluten Einschätzung des eigenen Wohlbefindens und einer Einschätzung verglichen mit dem eigenen sozialen Umfeld. Bei den weiteren beiden Items wird die befragte Person angehalten, sich bezüglich einer individuellen Beschreibungen glücklicher und unglücklicher Menschen einzuschätzen. Das Antwortformat der vier Items basiert auf einer sieben Punkte Likertskala. 
+
+\citeA{Lyubomirsky1999} weisen darauf hin, dass der SHS sich für die Erfassung des subjektiven Wohlbefindens besser eignet als andere vergleichbare Instrumente (z.B.: \textit{Affect Balance Scale} oder \textit{the Satisfaction With Life Scale}), da der Fragebogen eine globale subjektive Einschätzung bezügliche Wohlbefinden vornimmt, im Gegensatz zur Erfassung von eigentlichen Glückszuständen, die einer bestimmte Zeitspanne zuzuordnen sind (z.B.: affektive und kognitive Zustände). Der Fragebogen wurde in 14 Studien mit einem Total von 2,732 Teilnehmern validiert. Die Daten wurden innerhalb der vereinigten Staaten anhand von Studenten zweier Universitäten und einer Mittelschule, von Erwachsenen innerhalb zweier Städten in Kalifornien   erhoben. Zudem wurden Teilnehmer aus Moswkau, Russland beigezogen. Demzufolge soll der SHS eine hohe interne Konsistenz aufweisen, welche über alle Stichproben stabil blieben. Die Test-Retest-Korrelation und die Korrelation zwischen Eigen- und Fremdeinschätzung deuten auf eine gute bis sehr gute Realiabilität hin. 
+Zudem deute die Konstruktvalidität darauf hin, dass der Fragebogen auch wirklich das Konstrukt subjektives Wohlbefinden misst (vgl. ebd.). \citeA{Swami2009} konnten in ihrer Studie nachweisen, dass es sich bei der deutschen Übersetzung um eine unidimensionale Struktur, mit einer hohen internen Konsitenz handelt. Diese Übersetzung korrelierte hoch mit anderen Messinstrumenten, welche das subjektive Wohlbefinden erfassen. Demzufolge habe der neue Fragebogen eine gute Konvergenzvalidität. Hingegen konnten die Forscher keine Aussage über die Test-Retest-Reliabilität machen, noch nahmen sie eine Validierungsprüfung vor, da dies nicht zum Gegenstand der Überprüfung zählte (vgl. ebd.).
+
+
 
 
 \subsection{Datenerhebung}
+
+
 \subsection{Beschreibung der Stichprobe}
+
+
 \subsection{Empirische Hypothesen}\label{sec:EmpirischeHypothesen}
 \subsection{Statistische Analyseverfahren}
