anhang: umfrage weiter implementiert

--- a/content/Anhang/Umfragebogen.tex
+++ b/content/Anhang/Umfragebogen.tex
@@ -1,4 +1,4 @@
-Der im Folgenden abgebildete Fragebogen stellt eine leichte Abwandlung des originalen Onlinefragebogens dar, da die Umsetzung der grafischen Elemente zwecks Lesbarkeit in diesem Dokument vereinfacht wurden. Inhaltlich wurden keine Anpassungen vorgenommen, sie stimmen somit überein.
+Der im Folgenden abgebildete Fragebogen stellt eine leichte Abwandlung des originalen Onlinefragebogens dar, da die Umsetzung der grafischen Elemente zwecks Lesbarkeit in diesem Dokument vereinfacht wurden. Inhaltlich wurden keine Anpassungen vorgenommen.
 
 \subsection{Startseite}
 \textbf{Herzlich willkommen zum Elternfragebogen}
@@ -20,34 +20,77 @@ Bei Fragen und Rückmeldungen zur Studie können Sie sich per Mail an Till ERNST
 \subsection{Demografische Daten}
 Zuerst folgen ein paar Angaben zu Ihrer Person und Ihrem Kind im Alter zwischen 0 und 1 Jahr. Falls Sie mehrere Kinder in diesem Alter betreuen, entscheiden Sie sich für dasjenige, das Sie am häufigsten betreuen. Gehen Sie in den folgenden Fragen immer vom gleichen Kind aus.
 
-\subsubsection{Ihr Geschlecht}
-\textit{weiblich, männlich, keine Angabe}
-
-\subsubsection{Ihr Jahrgang}
-z.B.: 1980
-
-\subsubsection{Alter Ihres Kindes in Monaten}
-Sie können auch ein Koma setzen, z.B. 5,4
-
-\subsubsection{Geschlecht des Kindes}
-\textit{weiblich, männlich, keine Angabe}
-
-\subsubsection{Ihr Brutto Familieneinkommen}
-\textit{keine Angabe | Bis 26’000 CHF pro Jahr | Von 26’001 bis 52’000 CHF pro Jahr | Von 52’001 bis 78’000 CHF pro Jahr | Von 78’001 bis 104’000 CHF pro Jahr | 104’001 CHF pro Jahr und mehr}
-
-\subsubsection{Welches ist Ihr bisher höchster Bildungsabschluss?}
-\textit{keine Angabe | Obligatorische Grundschule | Lehrabschluss (Sekundär II) | Berufsmatura / Fachmittelschule (Sekundär II) | Gymnasiale Maturität (Sekundär II) | Höhere Fachschule (Tertiär) | Uni / Fachhochschule (Tertiär) | Doktorat (Tertiär)}
-
-\subsubsection{Wieviele Personen leben total in Ihrem Haushalt (inklusive Kinder)?}
-Familiengrösse
-
-\subsubsection{Wie leben sie aktuell?}
-\textit{alleinstehend, verheiratet | alleinstehend, nicht verheiratet | in Partnerschaft, verheiratet | in Partnerschaft, nicht verheiratet | in einer WG, verheiratet | in einer WG, nicht verheiratet}
-
-\subsubsection{An wievielen Tagen pro Woche wird Ihr Kind fremdbetreut (z.B.: durch Krippe, Hort, Nanny, Grosseltern, Tagesmutter etc.)?}
-Sie können auch Halbtage eingeben (z.B.: 1,5 Tage) / 0 = keine Fremdbetreuung
-
-\subsubsection{Wie viel Prozent der Betreuung für das Kind übernehmen Sie pro Woche?}
-z.B.: 50\% wenn Sie sich die Betreuung mit Ihrem Partner / Ihrer Partnerin je zur Hälfte teilen.
+\begin{longtable}[c]{ |p{1em}|p{16em}|p{16em}| }
+  %\caption{Demografische Daten}\label{tab:DemografischeDaten}\\
+ 
+  \hline
+  Nr. & Frage & Antwortabstufungen \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{3}{|c|}{ Fortsetzung Demografische Daten}\\
+  \hline
+  Nr. & Frage & Antwortabstufungen \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+ 
+  1 & Ihr Geschlecht & weiblich, männlich,  keine Angabe \\
+  2 & Ihr Jahrgang & \textit{(z.B.: 1980)}  \\
+  3 & Alter Ihres Kindes in Monaten & \textit{(z.B.: z.B. 5,4)}\\
+  4 & Geschlecht des Kindes & weiblich, männlich, keine Angabe \\
+  5 & Ihr Brutto Familieneinkommen & keine Angabe | Bis 26’000 CHF pro Jahr | Von 26’001 bis 52’000 CHF pro Jahr | Von 52’001 bis 78’000 CHF pro Jahr | Von 78’001 bis 104’000 CHF pro Jahr | 104’001 CHF pro Jahr und mehr \\
+  6 & Welches ist Ihr bisher höchster Bildungsabschluss? & keine Angabe | Obligatorische Grundschule | Lehrabschluss (Sekundär II) | Berufsmatura / Fachmittelschule (Sekundär II) | Gymnasiale Maturität (Sekundär II) | Höhere Fachschule (Tertiär) | Uni / Fachhochschule (Tertiär) | Doktorat (Tertiär) \\
+  7 & Wieviele Personen leben total in Ihrem Haushalt (inklusive Kinder)? & \textit{Familiengrösse} \\
+  8 & Wie leben sie aktuell? & alleinstehend, verheiratet | alleinstehend, nicht verheiratet | in Partnerschaft, verheiratet | in Partnerschaft, nicht verheiratet | in einer WG, verheiratet | in einer WG, nicht verheiratet \\
+  9 & An wievielen Tagen pro Woche wird Ihr Kind fremdbetreut (z.B.: durch Krippe, Hort, Nanny, Grosseltern, Tagesmutter etc.)? Sie können auch Halbtage eingeben & \textit{(z.B.: 1,5 Tage, 0 = keine Fremdbetreuung)} \\
+  10 & Wie viel Prozent der Betreuung für das Kind übernehmen Sie pro Woche? & \textit{(z.B.: 50\% wenn Sie sich die Betreuung mit Ihrem Partner / Ihrer Partnerin je zur Hälfte teilen)} \\
+  
+\end{longtable}
 
 \subsection{Medien und Mediennutzung}
+Im Folgenden werden Sie gebeten, Angaben über verschiedene Medien-Tätigkeiten so exakt wie möglich zu machen, die Sie während der Betreuung von Ihrem Kind ausüben. Stellen Sie sich dabei die letzte Situation vor, in der Sie während mindestens zwei Stunden alleine mit Ihrem Kind waren.
+
+Welche der folgenden Geräte und Medien haben Sie während der letzten Betreuung beruflich oder privat genutzt?
+
+\begin{longtable}[c]{ |p{1em}|p{12em}|p{5em}|p{5em}|p{5em}|p{5em}|}
+  %\caption{Demografische Daten}\label{tab:DemografischeDaten}\\
+ 
+  \hline
+  Nr. &  & privat genutzt & beruflich genutzt & privat und beruflich genutzt & nicht genutzt \\
+  \hline
+  \endfirsthead
+ 
+  \hline
+  \multicolumn{6}{|c|}{ Fortsetzung Medien und Mediennutzung}\\
+  \hline
+  Nr. &  & privat genutzt & beruflich genutzt & privat und beruflich genutzt & nicht genutzt \\
+  \hline
+  \endhead
+ 
+  \hline
+  \endfoot
+ 
+  \hline\hline
+  \endlastfoot
+  
+  
+  11 & Smartphone &  &  &  &  \\
+  12 & TV &  &  &  &  \\
+  13 & Desktop / Laptop Computer &  &  &  &  \\
+  14 & Tablet &  &  &  &  \\
+  15 & Radio / Stereoanlage / CD-Player &  &  &  &  \\
+  16 & Printmedien (Buch / Zeitung / Heft / Comic) &  &  &  &  \\
+  17 & Foto- und/oder Videocamera &  &  &  &  \\
+  18 & Spielkonsole &  &  &  &  \\
+  19 & MP3 Player &  &  &  &  \\
+  
+\end{longtable}
+
+Welche Medientätigkeiten in Minuten haben Sie während der letzten Betreuung im Beisein Ihres Kindes genutzt? Bitte geben Sie die Zeit in Minuten an und unterscheiden Sie, ob das Kind geschlafen hat oder wach war.
