--- a/header.tex
+++ b/header.tex
@@ -15,6 +15,9 @@
 \usepackage{pdfpages}
 \usepackage[]{ragged2e}
 \usepackage{glossaries}
+\usepackage{array}
+\usepackage{multirow}
+\usepackage{longtable}
 
 % Für Verweise innerhalb Doc (siehe https://strobelstefan.org/?p=145) -> funktioniert nicht mich package hyperref!
 %------------------------------------------------
