--- a/main.tex
+++ b/main.tex
@@ -89,14 +89,25 @@ Bindungsstil, Stress und Wohlbefinden - Faktoren des Medienverhaltens von Eltern
 
 % AAS Fragebogen
 \section{Die Adult Attachment Scale (AAS)}\label{app:AAS}
+\newpage
+
+% PSQ Fragebogen
+\section{Perceived Stress Questionnaire (PSQ)}\label{app:PSQ}
+\newpage
+
+% SHS Fragebogen
+\section{Subjective Happiness Scale (SHS)}\label{app:SHS}
+\newpage
 
 % Fragebogen
 \section{Fragebogen}\label{app:Fragebogen}
 \input{content/Anhang/Umfragebogen.tex}
+\newpage
 
 % Flyer für die Rekrutierung
 \section{Flyer}\label{app:Flyer}
 \input{content/Anhang/Flyer.tex}
+\newpage
 
 % Ehrenwörtliche Erklärung
 
